@@ -39,4 +39,5 @@ done
 --add-opens=java.base/java.util=ALL-UNNAMED \
 --add-opens=java.base/java.lang=ALL-UNNAMED \
 --add-opens=java.base/java.lang.invoke=ALL-UNNAMED \
+--add-opens=java.base/sun.security.action=ALL-UNNAMED \
 -cp $EXTENDCLASSPATH:$LIB "com.viewfunction.docg.analysisProvider.providerApplication.AnalysisProviderApplicationLauncher"
